--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier \"{apps,libs}/**/*.{ts,tsx,js,json}\" --ignore-path .gitignore",
+    "format:check": "prettier \"{apps,libs}/**/*.{ts,tsx,js,json}\" --ignore-path .gitignore --check",
+    "format:write": "prettier \"{apps,libs}/**/*.{ts,tsx,js,json}\" --ignore-path .gitignore --write",
+    "tsc": "npm run tsc --workspaces",
+    "lint": "npm run lint --workspaces",
+    "build": "npm run build --workspaces",
+    "validate": "npm run format:check && npm run tsc && npm run build",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "husky": "^8.0.0"
   }
 }
