--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3001",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "next": "15.5.4",
@@ -13,11 +15,12 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@parking-application/sample-lib": "*",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
   }
