--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,9 +14,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "strictNullChecks": false,
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
+    // "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
